add tables and add java 8 examples